examples/test/testpolicy2615.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2615
  namespace: namespace12
spec:
  podSelector:
    matchLabels:
      key12: value43
      key2: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value17
          key11: value32
          key44: value45
      podSelector:
        matchLabels:
          key5: value9
